
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainTable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.me.timlittle.tt1.MainActivity" >

        <TableRow>
    	<TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
         android:layout_span="3">

        <TableRow android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/earlierTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/show_previous"
                android:src="@drawable/ic_ealier_term" />

            <EditText
                android:id="@+id/termName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/term_name_hint"
                android:inputType="" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/nextTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/show_next"
                android:src="@drawable/ic_next_term" />
            
        </TableRow>
        </TableLayout>
        </TableRow>
    <TableRow >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_date_prompt" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/pickStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick" />
    
    </TableRow>
    <TableRow >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_enddate_prompt" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/pickEndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick" />
    
    </TableRow>
    <TableRow>

        <CheckBox
            android:id="@+id/termStartWeekChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_first_week" />
        
    </TableRow>
    
    </TableLayout>

    